--- a/JView.css
+++ b/JView.css
@@ -1,9 +1,9 @@
-.json-viewer {
+.jv {
 	color: #000;
 	padding-left: 20px;
 }
 
-.json-viewer ul {
+.jv ul {
 	list-style-type: none;
 	margin: 0;
 	margin: 0 0 0 1px;
@@ -11,35 +11,35 @@
 	padding-left: 2em;
 }
 
-.json-viewer .hide {
+.jv .hide {
 	display: none;
 }
 
-.json-viewer ul li .type-string,
-.json-viewer ul li .type-date {
+.jv ul li .type-string,
+.jv ul li .type-date {
 	color: #0B7500;
 }
 
-.json-viewer ul li .type-boolean {
+.jv ul li .type-boolean {
 	color: #1A01CC;
 	font-weight: bold;
 }
 
-.json-viewer ul li .type-number {
+.jv ul li .type-number {
 	color: #1A01CC;
 }
 
-.json-viewer ul li .type-null {
+.jv ul li .type-null {
 	color: red;
 }
 
-.json-viewer a.list-link {
+.jv a.list-link {
 	color: #000;
 	text-decoration: none;
 	position: relative;
 }
 
-.json-viewer a.list-link:before {
+.jv a.list-link:before {
 	color: #aaa;
 	content: "\25BC";
 	position: absolute;
@@ -48,19 +48,19 @@
 	left: -1em;
 }
 
-.json-viewer a.list-link.collapsed:before {
+.jv a.list-link.collapsed:before {
 	content: "\25B6";
 }
 
-.json-viewer a.list-link.empty:before {
+.jv a.list-link.empty:before {
 	content: "";
 }
 
-.json-viewer .items-ph {
+.jv .items-ph {
 	color: #aaa;
 	padding: 0 1em;
 }
 
-.json-viewer .items-ph:hover {
+.jv .items-ph:hover {
 	text-decoration: underline;
 }
